--- a/src/style.css
+++ b/src/style.css
@@ -352,27 +352,38 @@ table {
     left: 0;
     top: 0;
     z-index: 1;
-    height: 70vh !important;
+    /* height: 70vh !important; */
 }
 
-.roomBase {
-    width: 100%;
-    bottom: 0;
-    position: absolute;
-    z-index: -1;
-}
-
-.roomBase img {
-    width: 100%;
-    object-fit: cover;
-    z-index: 100000;
-    position: relative;
-}
 
 .preview {
-    position: relative;
+    position: fixed;
     z-index: 1000;
     display: block;
-    width: 60%;
+    width: 80%;
+    height: 80%;
+    margin: 0 auto;
+    left: 50%;
+    top: 35%;
+    transform: translate(-50%, -50%);
+}
+.prevWrap:before {
+    content: '';
+    width: 100%;
     height: 100%;
+    position: fixed;
+    z-index: 2;
+    left: 0;
+    top: 0;
+    background: rgb(251 251 253 / 40%) !important;
+    backdrop-filter: saturate(180%) blur(18px) !important;
+}
+span.closePreview {
+    position: fixed;
+    top: 25%;
+    z-index: 10000;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding: 40px;
+    cursor: pointer;
 }
